--- a/css/main.css
+++ b/css/main.css
@@ -32,9 +32,17 @@ body > .container { background-color: #fff; }
 
 .wpb_content_element { margin-bottom: 25px; }
 
-.navbar-nav > li > a { color: #6d6e70; text-transform: uppercase; }
+.vc_column_container > .vc_column-inner { box-sizing: border-box; padding-left: 30px; padding-right: 30px; width: 100%; }
 
-.navbar-nav > li > a:first-child { padding-left: 0; }
+.navbar-nav > li > a { color: #6d6e70; text-transform: uppercase; font-size: 12px; padding: 10px 13px; letter-spacing: .008em; }
 
-.navbar-collapse { padding-left: 0; padding-right: 0; }
+.navbar-nav > li:first-child a { padding-left: 0; }
+
+.navbar-nav > li:last-child a { padding-right: 0; }
+
+.double-rule { height: 6px; border-top: 1px solid #a30823; border-bottom: 1px solid #a30823; border-left: 0; border-right: 0; background-color: transparent; margin: 0; }
+
+.navbar-collapse { padding-left: 0; padding-right: 0; padding-top: 5px; }
+
+.input-xs { height: 20px; padding: 5px; font-size: 12px; line-height: 1.5; border-radius: 0; border-color: #b6b7b8; }
 /*# sourceMappingURL=main.css.map */
