--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -17,3 +17,9 @@ body {
   margin-bottom: 25px;
 }
 
+.vc_column_container > .vc_column-inner {
+  box-sizing: border-box;
+  padding-left: 30px;
+  padding-right: 30px;
+  width: 100%;
+}
