--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -18,7 +18,7 @@ h2.page-header {
   font-size: 50px;
   line-height: 1.2;
   padding-bottom: 0px;
-  margin: 20px 0 10px;
+  margin: -15px 0 10px;
   border-bottom: 0;
   font-weight: normal;
 }
@@ -55,4 +55,7 @@ p {
 .image-caption {
   font-size: 10px;
   line-height: 12px;
+  p {
+    margin-bottom: 0;
+  }
 }
