removed menu drop arrow

--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -12,6 +12,11 @@
         color: $maroon;
       }
     }
+    &.menu-item-has-children {
+      .caret {
+        display: none;
+      }
+    }
 
     &:first-child {
       a {
