--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ body { background-color: #e2e2e2; }
 
 body > .container { background-color: #fff; }
 
-.wpb_content_element { margin-bottom: 25px; }
+.wpb_content_element { margin-bottom: 10px; }
 
 .vc_column_container > .vc_column-inner { box-sizing: border-box; padding-left: 30px; padding-right: 30px; width: 100%; }
 
@@ -41,6 +41,8 @@ body > .container { background-color: #fff; }
 .navbar-nav > li > a { color: #6d6e70; text-transform: uppercase; font-size: 12px; padding: 10px 14px; letter-spacing: .0255em; }
 
 .navbar-nav > li.current-menu-item a { color: #a30823; }
+
+.navbar-nav > li.menu-item-has-children .caret { display: none; }
 
 .navbar-nav > li:first-child a { padding-left: 0; }
 
