--- a/css/main.css
+++ b/css/main.css
@@ -22,9 +22,7 @@ h3 { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; font-s
 
 p { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; font-size: 12px; line-height: 15px; }
 
-.image-caption { font-size: 10px; line-height: 12px; }
-
-.image-caption p { margin-bottom: 0; }
+.image-caption p { font-size: 10px; line-height: 12px; margin-bottom: 0; margin-right: 20px; }
 
 body { background-color: #e2e2e2; }
 
@@ -68,5 +66,9 @@ body > .container { background-color: #fff; }
 
 .dmbs-footer .footer-rule { background-color: #6d6e70; height: 1px; margin: 40px 0; }
 
+.dmbs-footer .larger { font-size: 15px; }
+
 .dmbs-footer h3 { font-family: "LTC Twentieth Century Medium", Helvetica, Arial, sans-serif; color: #a30823; font-size: 12px; text-transform: uppercase; letter-spacing: .04em; font-weight: normal; margin-bottom: 3px; }
+
+.dmbs-footer p { font-size: 12px; line-height: 16px; }
 /*# sourceMappingURL=main.css.map */
