--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -53,9 +53,11 @@ p {
 }
 
 .image-caption {
-  font-size: 10px;
-  line-height: 12px;
+
   p {
+    font-size: 10px;
+  line-height: 12px;
     margin-bottom: 0;
+    margin-right: 20px;
   }
 }
