--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -2,7 +2,7 @@
   .footer-rule {
     background-color: $gray;
     height: 1px;
-    margin: 40px 0;
+    margin: 20px 0 30px;
   }
   .larger {
     font-size: 15px;
