--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,8 @@
 
 body { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; line-height: 1.2; color: #6d6e70; }
 
+h1, h2, h3, h4, h5 { font-weight: normal; }
+
 h2.page-header { font-family: "LTC Twentieth Century Medium", Helvetica, Arial, sans-serif; color: #a30723; font-size: 50px; line-height: 1.2; padding-bottom: 0px; margin: -15px 0 10px; border-bottom: 0; font-weight: normal; }
 
 .wpb_text_column.page-header { margin: 0; border-bottom: 0; }
@@ -20,9 +22,11 @@ h2.page-header { font-family: "LTC Twentieth Century Medium", Helvetica, Arial, 
 
 h3 { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; font-size: 16px; margin-top: 0; font-weight: normal; }
 
-p { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; font-size: 12px; line-height: 15px; }
+p { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; font-size: 14px; line-height: 1.25; }
 
 .image-caption p { font-size: 10px; line-height: 12px; margin-bottom: 0; margin-right: 20px; }
+
+.photo-credit { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; font-size: 9px; margin-top: 3px; margin-bottom: 10px; }
 
 body { background-color: #e2e2e2; }
 
@@ -35,6 +39,8 @@ body > .container { background-color: #fff; }
 .wpb_column:first-child > .vc_column-inner { padding-left: 15px; }
 
 .wpb_column:last-child > .vc_column-inner { padding-right: 15px; }
+
+.row-flex { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
 .navbar-nav > li > a { color: #6d6e70; text-transform: uppercase; font-size: 12px; padding: 10px 14px; letter-spacing: .0255em; }
 
@@ -64,11 +70,37 @@ body > .container { background-color: #fff; }
 
 .social-links li { display: inline-block; }
 
-.dmbs-footer .footer-rule { background-color: #6d6e70; height: 1px; margin: 40px 0; }
+.dmbs-footer .footer-rule { background-color: #6d6e70; height: 1px; margin: 20px 0 30px; }
 
 .dmbs-footer .larger { font-size: 15px; }
 
 .dmbs-footer h3 { font-family: "LTC Twentieth Century Medium", Helvetica, Arial, sans-serif; color: #a30723; font-size: 12px; text-transform: uppercase; letter-spacing: .04em; font-weight: normal; margin-bottom: 3px; }
 
 .dmbs-footer p { font-size: 12px; line-height: 16px; }
+
+.trustees .col-left h3, .trustees .col-main h3, .trustees .col-right h3 { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; font-size: 14px; text-transform: uppercase; font-weight: normal; }
+
+.trustees { margin-top: 20px; }
+
+.trustees .trustee-list p { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; line-height: 1.33; margin-bottom: 6px; }
+
+.trustees .trustee-list h4 { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; font-size: 14px; font-weight: normal; margin-bottom: 3px; margin-top: 20px; }
+
+.trustees .trustee-list h4:first-of-type { margin-top: 0; }
+
+.trustees .col-left { width: 475px; margin-right: 60px; }
+
+.trustees .col-main { width: 786px; margin-right: 60px; }
+
+.trustees .col-right { width: 390px; }
+
+.trustees .trustee-photos li:last-child { margin-top: 20px; }
+
+.trustees .trustee-pdf-downloads { border-top: 4px solid #000; border-bottom: 4px solid #000; padding-top: 10px; padding-bottom: 5px; }
+
+.trustees .trustee-pdf-downloads ul { list-style: none; padding-left: 0; }
+
+.trustees .trustee-pdf-downloads ul li { margin-bottom: 10px; }
+
+.trustees .trustee-pdf-downloads ul li a { color: #fff; text-transform: uppercase; font-size: 9px; background-color: #6d6e70; padding: 6px 6px 4px; border-radius: 6px; }
 /*# sourceMappingURL=main.css.map */
