added oblique fonts

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@
 
 @font-face { font-family: 'Helvetica LT Std Roman'; src: url("../fonts/HelveticaLTStd-Roman.eot"); src: url("../fonts/HelveticaLTStd-Roman.eot?#iefix") format("embedded-opentype"), url("../fonts/HelveticaLTStd-Roman.woff2") format("woff2"), url("../fonts/HelveticaLTStd-Roman.woff") format("woff"), url("../fonts/HelveticaLTStd-Roman.svg#webfont") format("svg"); font-weight: normal; font-style: normal; }
 
+@font-face { font-family: 'Helvetica LT Std Light Oblique'; src: url("HelveticaLTStd-LightObl.eot"); src: url("HelveticaLTStd-LightObl.eot?#iefix") format("embedded-opentype"), url("HelveticaLTStd-LightObl.woff2") format("woff2"), url("HelveticaLTStd-LightObl.woff") format("woff"), url("HelveticaLTStd-LightObl.svg#webfont") format("svg"); font-weight: normal; font-style: normal; }
+
+@font-face { font-family: 'Helvetica LT Std Oblique'; src: url("HelveticaLTStd-Obl.eot"); src: url("HelveticaLTStd-Obl.eot?#iefix") format("embedded-opentype"), url("HelveticaLTStd-Obl.woff2") format("woff2"), url("HelveticaLTStd-Obl.woff") format("woff"), url("HelveticaLTStd-Obl.svg#webfont") format("svg"); font-weight: normal; font-style: normal; }
+
 body { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; line-height: 1.2; color: #6d6e70; }
 
 h1, h2, h3, h4, h5 { font-weight: normal; }
@@ -83,6 +87,8 @@ body > .container { background-color: #fff; }
 .trustees { margin-top: 20px; }
 
 .trustees .trustee-list p { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; line-height: 1.33; margin-bottom: 6px; }
+
+.trustees .trustee-list p i { font-style: normal; font-family: "Helvetica LT Std Light Oblique", Helvetica, Arial, sans-serif; }
 
 .trustees .trustee-list h4 { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; font-size: 14px; font-weight: normal; margin-bottom: 3px; margin-top: 20px; }
 
