--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -1,10 +1,12 @@
 // font variable defs
 $twentieth: 'LTC Twentieth Century Medium', Helvetica, Arial, sans-serif;
 $helvetica: 'Helvetica LT Std Roman', Helvetica, Arial, sans-serif;
+$helvetica-oblique: 'Helvetica LT Std Oblique', Helvetica, Arial, sans-serif;
 $helvetica-light: 'Helvetica LT Std Light', Helvetica, Arial, sans-serif;
+$helvetica-light-oblique: 'Helvetica LT Std Light Oblique', Helvetica, Arial, sans-serif;
+$helvetica-light-condensed: 'Helvetica LT Std Light Condensed', Helvetica, Arial, sans-serif;
 $helvetica-bold: 'Helvetica LT Std Bold', Helvetica, Arial, sans-serif;
 $helvetica-black: 'Helvetica LT Std Black', Helvetica, Arial, sans-serif;
-$helvetica-light-condensed: 'Helvetica LT Std Light Condensed', Helvetica, Arial, sans-serif;
 $body-text-size: 14px;
 
 body {
