--- a/sass/partials/pages/_trustees.scss
+++ b/sass/partials/pages/_trustees.scss
@@ -13,6 +13,10 @@
       font-family: $helvetica-light;
       line-height: 1.33;
       margin-bottom: 6px;
+      i {
+        font-style: normal;
+        font-family: $helvetica-light-oblique;
+      }
     }
 
     h4 {
