--- a/sass/partials/_fonts.scss
+++ b/sass/partials/_fonts.scss
@@ -45,3 +45,19 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Helvetica LT Std Light Oblique';
+  src: url('HelveticaLTStd-LightObl.eot');
+  src: url('HelveticaLTStd-LightObl.eot?#iefix') format('embedded-opentype'), url('HelveticaLTStd-LightObl.woff2') format('woff2'), url('HelveticaLTStd-LightObl.woff') format('woff'), url('HelveticaLTStd-LightObl.svg#webfont') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica LT Std Oblique';
+  src: url('HelveticaLTStd-Obl.eot');
+  src: url('HelveticaLTStd-Obl.eot?#iefix') format('embedded-opentype'), url('HelveticaLTStd-Obl.woff2') format('woff2'), url('HelveticaLTStd-Obl.woff') format('woff'), url('HelveticaLTStd-Obl.svg#webfont') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
