--- a/sass/partials/_fonts.scss
+++ b/sass/partials/_fonts.scss
@@ -48,16 +48,16 @@
 
 @font-face {
   font-family: 'Helvetica LT Std Light Oblique';
-  src: url('HelveticaLTStd-LightObl.eot');
-  src: url('HelveticaLTStd-LightObl.eot?#iefix') format('embedded-opentype'), url('HelveticaLTStd-LightObl.woff2') format('woff2'), url('HelveticaLTStd-LightObl.woff') format('woff'), url('HelveticaLTStd-LightObl.svg#webfont') format('svg');
+  src: url('../fonts/HelveticaLTStd-LightObl.eot');
+  src: url('../fonts/HelveticaLTStd-LightObl.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaLTStd-LightObl.woff2') format('woff2'), url('../fonts/HelveticaLTStd-LightObl.woff') format('woff'), url('../fonts/HelveticaLTStd-LightObl.svg#webfont') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica LT Std Oblique';
-  src: url('HelveticaLTStd-Obl.eot');
-  src: url('HelveticaLTStd-Obl.eot?#iefix') format('embedded-opentype'), url('HelveticaLTStd-Obl.woff2') format('woff2'), url('HelveticaLTStd-Obl.woff') format('woff'), url('HelveticaLTStd-Obl.svg#webfont') format('svg');
+  src: url('../fonts/HelveticaLTStd-Obl.eot');
+  src: url('../fonts/HelveticaLTStd-Obl.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaLTStd-Obl.woff2') format('woff2'), url('../fonts/HelveticaLTStd-Obl.woff') format('woff'), url('../fonts/HelveticaLTStd-Obl.svg#webfont') format('svg');
   font-weight: normal;
   font-style: normal;
 }
