--- a/css/main.css
+++ b/css/main.css
@@ -86,11 +86,11 @@ body > .container { background-color: #fff; }
 
 .trustees { margin-top: 20px; }
 
-.trustees .trustee-list p { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; line-height: 1.33; margin-bottom: 6px; }
+.trustees .trustee-list p { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; line-height: 1.33; margin-bottom: 6px; font-size: 12px; }
 
 .trustees .trustee-list p i { font-style: normal; font-family: "Helvetica LT Std Light Oblique", Helvetica, Arial, sans-serif; }
 
-.trustees .trustee-list h4 { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; font-size: 14px; font-weight: normal; margin-bottom: 3px; margin-top: 20px; }
+.trustees .trustee-list h4 { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; font-size: 12px; font-weight: normal; margin-bottom: 3px; margin-top: 20px; }
 
 .trustees .trustee-list h4:first-of-type { margin-top: 0; }
 
