--- a/sass/partials/pages/_trustees.scss
+++ b/sass/partials/pages/_trustees.scss
@@ -71,6 +71,7 @@
     border-bottom: 4px solid #000;
     padding-top: 10px;
     padding-bottom: 5px;
+    margin-top: 30px;
     ul {
       list-style: none;
       padding-left: 0;
