--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+.my-box { padding: 10px; }
+
+@media (min-width: 1200px) { .my-box { padding: 20px; } }
+
 @font-face { font-family: 'LTC Twentieth Century Medium'; src: url("../fonts/LTCTwentiethCenturyMedium.eot"); src: url("../fonts/LTCTwentiethCenturyMedium.eot?#iefix") format("embedded-opentype"), url("../fonts/LTCTwentiethCenturyMedium.woff2") format("woff2"), url("../fonts/LTCTwentiethCenturyMedium.woff") format("woff"), url("../fonts/LTCTwentiethCenturyMedium.svg#webfont") format("svg"); font-weight: normal; font-style: normal; }
 
 @font-face { font-family: 'Helvetica LT Std Black'; src: url("../fonts/HelveticaLTStd-Blk.eot"); src: url("../fonts/HelveticaLTStd-Blk.eot?#iefix") format("embedded-opentype"), url("../fonts/HelveticaLTStd-Blk.woff2") format("woff2"), url("../fonts/HelveticaLTStd-Blk.woff") format("woff"), url("../fonts/HelveticaLTStd-Blk.svg#webfont") format("svg"); font-weight: normal; font-style: normal; }
@@ -18,6 +22,8 @@ body { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; line
 
 h1, h2, h3, h4, h5 { font-weight: normal; }
 
+h1 b, h2 b, h3 b, h4 b, h5 b { font-weight: normal; }
+
 h2.page-header { font-family: "LTC Twentieth Century Medium", Helvetica, Arial, sans-serif; color: #a30723; font-size: 50px; line-height: 1.2; padding-bottom: 0px; margin: -15px 0 10px; border-bottom: 0; font-weight: normal; }
 
 .wpb_text_column.page-header { margin: 0; border-bottom: 0; }
@@ -27,6 +33,8 @@ h2.page-header { font-family: "LTC Twentieth Century Medium", Helvetica, Arial, 
 h3 { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; font-size: 16px; margin-top: 0; font-weight: normal; }
 
 p { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; font-size: 14px; line-height: 1.25; }
+
+.image-caption { margin-top: 5px; }
 
 .image-caption p { font-size: 10px; line-height: 12px; margin-bottom: 0; margin-right: 20px; }
 
@@ -45,6 +53,10 @@ body > .container { background-color: #fff; }
 .wpb_column:last-child > .vc_column-inner { padding-right: 15px; }
 
 .row-flex { display: -webkit-box; display: -ms-flexbox; display: flex; }
+
+@media (max-width: 599px) { .row-flex { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; } }
+
+@media (max-width: 599px) { .row-flex > div { width: 100% !important; } }
 
 .navbar-nav > li > a { color: #6d6e70; text-transform: uppercase; font-size: 12px; padding: 10px 14px; letter-spacing: .0255em; }
 
@@ -102,7 +114,7 @@ body > .container { background-color: #fff; }
 
 .trustees .trustee-photos li:last-child { margin-top: 20px; }
 
-.trustees .trustee-pdf-downloads { border-top: 4px solid #000; border-bottom: 4px solid #000; padding-top: 10px; padding-bottom: 5px; }
+.trustees .trustee-pdf-downloads { border-top: 4px solid #000; border-bottom: 4px solid #000; padding-top: 10px; padding-bottom: 5px; margin-top: 30px; }
 
 .trustees .trustee-pdf-downloads ul { list-style: none; padding-left: 0; }
 
