--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -4,8 +4,11 @@
       color: #6d6e70;
       text-transform: uppercase;
       font-size: 12px;
-      padding: 10px 14px;
+      padding: 10px 13px;
       letter-spacing: .0255em;
+      &:hover {
+        background-color: transparent;
+      }
     }
     &.current-menu-item {
       a {
