--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,8 @@ body > .container { background-color: #fff; }
 
 textarea { border-color: #bfbfbf !important; }
 
+.ngg-navigation a.next, .ngg-navigation a.page-numbers, .ngg-navigation a.prev, .ngg-navigation span.next, .ngg-navigation span.page-numbers, .ngg-navigation span.prev { border: 0 !important; margin-right: 0; padding: 0; text-decoration: none; color: #a30723 !important; }
+
 .navbar-nav > li > a { color: #6d6e70; text-transform: uppercase; font-size: 12px; padding: 10px 13px; letter-spacing: .0255em; }
 
 .navbar-nav > li > a:hover { background-color: transparent; }
@@ -136,9 +138,9 @@ textarea { border-color: #bfbfbf !important; }
 
 .page.page-id-87 li b { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; color: #a30723; font-weight: normal; }
 
-.page.page-id-87 form { padding: 10px; border: 1px dashed #6d6e70; }
+.page.page-id-87 .dmbs-content form { padding: 10px; border: 1px dashed #6d6e70; }
 
-.page.page-id-87 form input[type='submit'] { background-color: #fff; border: 0; color: #a30723; text-transform: uppercase; font-size: 14px; margin-left: 10px; }
+.page.page-id-87 .dmbs-content form input[type='submit'] { background-color: #fff; border: 0; color: #a30723; text-transform: uppercase; font-size: 14px; margin-left: 10px; }
 
 .page.page-id-87 .gform_footer { margin-top: 0; padding-top: 0; }
 
