--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -43,6 +43,20 @@ body {
     }
   }
 }
- textarea {
+
+textarea {
   border-color: #bfbfbf !important;
+}
+
+.ngg-navigation a.next,
+.ngg-navigation a.page-numbers,
+.ngg-navigation a.prev,
+.ngg-navigation span.next,
+.ngg-navigation span.page-numbers,
+.ngg-navigation span.prev {
+  border: 0 !important;
+  margin-right: 0;
+  padding: 0;
+  text-decoration: none;
+  color: $maroon !important;
 }
