--- a/css/main.css
+++ b/css/main.css
@@ -145,4 +145,18 @@ textarea { border-color: #bfbfbf !important; }
 .page.page-id-87 .gform_footer { margin-top: 0; padding-top: 0; }
 
 .page.page-id-87 .address { margin-left: 20px; }
+
+.page-id-203 .col-md-4 h3 { text-transform: uppercase; font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; color: #6d6e70; }
+
+.page-id-203 .col-2 h3 { display: none; }
+
+.page-id-203 .news-content { font-family: Georgia, "Times New Roman", Times, serif; }
+
+.page-id-203 .news-source { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; font-size: 12px; margin-bottom: 4px; }
+
+.page-id-203 .news-date { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; font-size: 12px; margin-bottom: 10px; }
+
+.page-id-203 .news-link { margin-top: 10px; }
+
+.page-id-203 .news-link a { font-family: Georgia, "Times New Roman", Times, serif; color: #a30723; text-transform: uppercase; }
 /*# sourceMappingURL=main.css.map */
