--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -7,6 +7,7 @@ $helvetica-light-oblique: 'Helvetica LT Std Light Oblique', Helvetica, Arial, sa
 $helvetica-light-condensed: 'Helvetica LT Std Light Condensed', Helvetica, Arial, sans-serif;
 $helvetica-bold: 'Helvetica LT Std Bold', Helvetica, Arial, sans-serif;
 $helvetica-black: 'Helvetica LT Std Black', Helvetica, Arial, sans-serif;
+$georgia: Georgia, 'Times New Roman', Times, serif;
 $body-text-size: 14px;
 
 body {
