--- a/css/main.css
+++ b/css/main.css
@@ -146,17 +146,19 @@ textarea { border-color: #bfbfbf !important; }
 
 .page.page-id-87 .address { margin-left: 20px; }
 
-.page-id-203 .col-md-4 h3 { text-transform: uppercase; font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; color: #6d6e70; }
+.page-id-203 h3 { text-transform: uppercase; font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; color: #6d6e70; margin-bottom: 5px; }
 
-.page-id-203 .col-2 h3 { display: none; }
+.page-id-203 .news-content { font-family: Georgia, "Times New Roman", Times, serif; font-size: 13px; }
 
-.page-id-203 .news-content { font-family: Georgia, "Times New Roman", Times, serif; }
+.page-id-203 .news-content i { display: block; }
 
-.page-id-203 .news-source { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; font-size: 12px; margin-bottom: 4px; }
+.page-id-203 .news-source { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; font-size: 12px; margin-bottom: 2px; }
 
 .page-id-203 .news-date { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; font-size: 12px; margin-bottom: 10px; }
 
 .page-id-203 .news-link { margin-top: 10px; }
 
 .page-id-203 .news-link a { font-family: Georgia, "Times New Roman", Times, serif; color: #a30723; text-transform: uppercase; }
+
+.page-id-203 .news-item-block { border-top: 4px solid #000; padding-top: 10px; }
 /*# sourceMappingURL=main.css.map */
