--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -81,6 +81,7 @@ p {
 .photo-credit {
   font-family: $helvetica-light;
   font-size: 9px;
-  margin-top: 3px;
   margin-bottom: 10px;
+  margin-top: 5px;
+  text-align: right;
 }
