changed container size

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,10 +3,12 @@
 @import 'partials/fonts';
 @import 'partials/typography';
 @import 'partials/layout';
-@import 'partials/header';
-@import 'partials/footer';
+
 
 @import 'partials/pages/trustees';
 @import 'partials/pages/participate';
 @import 'partials/pages/press';
+@import 'partials/pages/welcome';
 
+@import 'partials/header';
+@import 'partials/footer';
