--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,10 @@ body { background-color: #e2e2e2; }
 
 body > .container { background-color: #fff; }
 
+@media all and (min-width: 1200px) { .container { width: 860px; } }
+
+@media all and (min-width: 992px) { .container { width: 860px; } }
+
 .wpb_content_element { margin-bottom: 10px; }
 
 .vc_column_container > .vc_column-inner { box-sizing: border-box; padding-left: 30px; padding-right: 30px; width: 100%; }
@@ -61,44 +65,6 @@ body > .container { background-color: #fff; }
 textarea { border-color: #bfbfbf !important; }
 
 .ngg-navigation a.next, .ngg-navigation a.page-numbers, .ngg-navigation a.prev, .ngg-navigation span.next, .ngg-navigation span.page-numbers, .ngg-navigation span.prev { border: 0 !important; margin-right: 0; padding: 0; text-decoration: none; color: #a30723 !important; }
-
-.navbar-nav > li > a { color: #6d6e70; text-transform: uppercase; font-size: 12px; padding: 10px 13px; letter-spacing: .0255em; }
-
-.navbar-nav > li > a:hover { background-color: transparent; }
-
-.navbar-nav > li.current-menu-item a { color: #a30723; }
-
-.navbar-nav > li.menu-item-has-children .caret { display: none; }
-
-.navbar-nav > li:first-child a { padding-left: 0; }
-
-.navbar-nav > li:last-child a { padding-right: 0; }
-
-.double-rule { height: 6px; border-top: 1px solid #a30723; border-bottom: 1px solid #a30723; border-left: 0; border-right: 0; background-color: transparent; margin: 0; }
-
-.navbar-collapse { padding-left: 0; padding-right: 0; padding-top: 0; }
-
-.input-xs { height: 20px; padding: 5px; font-size: 12px; line-height: 1.5; border-radius: 0; border-color: #b6b7b8; }
-
-.waa-header { padding: 15px 0; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
-
-.waa-header .header-right { width: 122px; }
-
-.waa-header .header-right form { margin-bottom: 7px; }
-
-.waa-header .header-right label { font-size: 9px; font-weight: normal; text-transform: uppercase; margin-bottom: 2px; }
-
-.social-links { list-style: none; margin: 0; padding: 0; }
-
-.social-links li { display: inline-block; }
-
-.dmbs-footer .footer-rule { background-color: #6d6e70; height: 1px; margin: 20px 0 30px; }
-
-.dmbs-footer .larger { font-size: 15px; }
-
-.dmbs-footer h3 { font-family: "LTC Twentieth Century Medium", Helvetica, Arial, sans-serif; color: #a30723; font-size: 12px; text-transform: uppercase; letter-spacing: .04em; font-weight: normal; margin-bottom: 3px; }
-
-.dmbs-footer p { font-size: 12px; line-height: 16px; }
 
 .trustees .col-left h3, .trustees .col-main h3, .trustees .col-right h3 { font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; font-size: 14px; text-transform: uppercase; font-weight: normal; }
 
@@ -146,7 +112,7 @@ textarea { border-color: #bfbfbf !important; }
 
 .page.page-id-87 .address { margin-left: 20px; }
 
-.page-press h3 { text-transform: uppercase; font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; color: #6d6e70; margin-bottom: 5px; }
+.page-press .dmbs-main h3 { text-transform: uppercase; font-family: "Helvetica LT Std Bold", Helvetica, Arial, sans-serif; color: #6d6e70; margin-bottom: 5px; }
 
 .page-press .news-content { font-family: Georgia, "Times New Roman", Times, serif; font-size: 13px; }
 
@@ -165,4 +131,48 @@ textarea { border-color: #bfbfbf !important; }
 .page-press .news-past-link a { color: #a30723; }
 
 .page-press .byline { font-style: italic; }
+
+.page-welcome .row-flex { -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; }
+
+.page-welcome .dmbs-content { min-height: 700px; background-image: url("../images/member-patterson-michael.jpg"); background-repeat: no-repeat; background-position: 50px bottom; margin-bottom: -21px; }
+
+.page-welcome .col-right { width: 315px; margin-right: 60px; }
+
+.navbar-nav > li > a { color: #6d6e70; text-transform: uppercase; font-size: 12px; padding: 10px 7px; letter-spacing: .0255em; }
+
+.navbar-nav > li > a:hover { background-color: transparent; }
+
+.navbar-nav > li.current-menu-item a { color: #a30723; }
+
+.navbar-nav > li.menu-item-has-children .caret { display: none; }
+
+.navbar-nav > li:first-child a { padding-left: 0; }
+
+.navbar-nav > li:last-child a { padding-right: 0; }
+
+.double-rule { height: 6px; border-top: 1px solid #a30723; border-bottom: 1px solid #a30723; border-left: 0; border-right: 0; background-color: transparent; margin: 0; }
+
+.navbar-collapse { padding-left: 0; padding-right: 0; padding-top: 0; }
+
+.input-xs { height: 20px; padding: 5px; font-size: 12px; line-height: 1.5; border-radius: 0; border-color: #b6b7b8; }
+
+.waa-header { padding: 15px 0; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
+
+.waa-header .header-right { width: 122px; }
+
+.waa-header .header-right form { margin-bottom: 7px; }
+
+.waa-header .header-right label { font-size: 9px; font-weight: normal; text-transform: uppercase; margin-bottom: 2px; }
+
+.social-links { list-style: none; margin: 0; padding: 0; }
+
+.social-links li { display: inline-block; }
+
+.dmbs-footer .footer-rule { background-color: transparent; height: 1px; margin: 20px 0 30px; border-top: 1px solid #6d6e70; }
+
+.dmbs-footer .larger { font-size: 15px; }
+
+.dmbs-footer h3 { font-family: "LTC Twentieth Century Medium", Helvetica, Arial, sans-serif; color: #a30723; font-size: 12px; text-transform: uppercase; letter-spacing: .04em; font-weight: normal; margin-bottom: 3px; }
+
+.dmbs-footer p { font-size: 12px; line-height: 16px; }
 /*# sourceMappingURL=main.css.map */
