--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import 'partials/pages/participate';
 @import 'partials/pages/press';
 @import 'partials/pages/welcome';
+@import 'partials/pages/exhibitions';
 
 @import 'partials/header';
 @import 'partials/footer';
