--- a/sass/partials/pages/_welcome.scss
+++ b/sass/partials/pages/_welcome.scss
@@ -6,14 +6,26 @@
     min-height: 700px;
     background-image: url('../images/member-patterson-michael.jpg');
     background-repeat: no-repeat;
-    background-position: 50px bottom;
+    background-position: 30px bottom;
     margin-bottom: -21px;
+    position: relative;
   }
   .col-right {
     width: 315px;
     margin-right: 60px;
+    .extra-block {
+      margin-top: 60px;
+    }
   }
   .col-center {
-
+    margin-right: 50px;
+    > ul > li:first-child {
+      margin-bottom: 50px;
+    }
+  }
+  .bottom-credit {
+    position: absolute;
+    bottom: 0;
+    right: 30px;
   }
 }
