--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,8 @@ p { font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; font-si
 
 .photo-credit { font-family: "Helvetica LT Std Light", Helvetica, Arial, sans-serif; font-size: 9px; margin-bottom: 10px; margin-top: 5px; text-align: right; }
 
+a { color: #a30723; }
+
 body { background-color: #e2e2e2; }
 
 body > .container { background-color: #fff; }
@@ -157,6 +159,12 @@ textarea { border-color: #bfbfbf !important; }
 .page-exhibitions .exhibition-tiles .tile .exhibition-title a:hover { text-decoration: none; }
 
 .page-exhibitions .exhibition-tiles .tile .exhibition-subtitle { color: #fff; font-family: "Helvetica LT Std Roman", Helvetica, Arial, sans-serif; font-size: 24px; }
+
+.page-exhibitions .caption p { font-size: 20px; line-height: 26px; }
+
+.page-exhibitions .opportunities { font-size: 17px; line-height: 24px; border-left: 6px double #6d6e70; padding-left: 10px; }
+
+.page-exhibitions .opportunities .opportunities-title { font-size: 30px; margin-bottom: 5px; text-transform: uppercase; font-family: "LTC Twentieth Century Medium", Helvetica, Arial, sans-serif; }
 
 .navbar-nav > li > a { color: #6d6e70; text-transform: uppercase; font-size: 12px; padding: 10px 11px; letter-spacing: .0255em; }
 
