--- a/sass/partials/pages/_exhibitions.scss
+++ b/sass/partials/pages/_exhibitions.scss
@@ -37,4 +37,20 @@
       }
     }
   }
+  .caption p {
+    font-size: 20px;
+    line-height: 26px;
+  }
+  .opportunities {
+    font-size: 17px;
+    line-height: 24px;
+    border-left: 6px double $gray;
+      padding-left: 10px;
+    .opportunities-title {
+      font-size: 30px;
+      margin-bottom: 5px;
+      text-transform: uppercase;
+      font-family: $twentieth;
+    }
+  }
 }
