--- a/sass/partials/pages/_press.scss
+++ b/sass/partials/pages/_press.scss
@@ -52,4 +52,18 @@
   .byline {
     font-style: italic;
   }
+  .press-release-block {
+    font-family: $georgia;
+    font-size: 13px;
+    .date {
+      font-size: 12px;
+    }
+    h4 {
+      font-weight: bold;
+      font-size: 14px;
+    }
+    a {
+      text-transform: uppercase;
+    }
+  }
 }
