--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -21,4 +21,26 @@
     font-size: 12px;
     line-height: 16px;
   }
+  .footer-flex {
+    justify-content: space-between;
+  }
+  .footer-1 {
+    width: 283px;
+    margin-right: 30px;
+  }
+  .footer-2 {
+    width: 165px;
+    margin-right: 30px;
+  }
+  .footer-3 {
+    width: 155px;
+    margin-right: 30px;
+  }
+  .footer-4 {
+    width: 150px;
+  }
 }
+  .copyright {
+    font-size: 11px;
+    padding: 20px 0 40px;
+  }
